--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "server": "nodemon index.js",
+    "mup": "knex migrate:up",
+    "md": "knex migrate:down",
+    "ml": "knex migrate:latest",
+    "rb": "knex migrate:rollback",
     "test": "cross-env NODE_ENV=testing jest --watchAll --verbose --runInBand --silent"
   },
   "repository": {
@@ -14,6 +20,14 @@
     "cross-env": "7.0.3",
     "eslint": "8.0.1",
     "jest": "27.3.1",
+    "nodemon": "^2.0.14",
     "supertest": "6.1.6"
+  },
+  "dependencies": {
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "helmet": "^4.6.0",
+    "knex": "^0.95.11",
+    "sqlite3": "^5.0.2"
   }
 }
